<resources>
    <string name="app_name">Square</string>
    <string name="emp_data_not_found">"&lt;Data Not Found&gt;"</string>
    <string name="emp_team">Team : </string>
    <string name="emp_type">Type : </string>
    <string name="emp_biography">Biography : </string>
    <string name="empty_data">Empty Data</string>
    <string name="data">Data</string>
    <string name="mal_data">Mal Data</string>
    <string name="full_name">Full Name</string>
    <string name="phone">Phone : </string>
    <string name="email_address">Email : </string>
    <string name="no_data_available_at_this_time">Oops! No data available at this time.</string>
</resources>