<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="10dp"
    android:layout_marginBottom="10dp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/emp_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginStart="5dp"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="5dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/emp_image"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/emp_full_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/full_name"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/emp_phone_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/phone"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/emp_full_name"
            app:layout_constraintTop_toBottomOf="@id/emp_full_name" />

        <TextView
            android:id="@+id/emp_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:text="@string/phone"
            app:layout_constraintStart_toEndOf="@+id/emp_phone_str"
            app:layout_constraintTop_toBottomOf="@id/emp_full_name" />

        <TextView
            android:id="@+id/emp_email_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/email_address"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/emp_full_name"
            app:layout_constraintTop_toBottomOf="@id/emp_phone" />

        <TextView
            android:id="@+id/emp_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:maxEms="12"
            android:text="@string/email_address"
            app:layout_constraintStart_toEndOf="@+id/emp_email_str"
            app:layout_constraintTop_toBottomOf="@id/emp_phone" />

        <TextView
            android:id="@+id/emp_biography_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/emp_biography"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/emp_full_name"
            app:layout_constraintTop_toBottomOf="@id/emp_email" />

        <TextView
            android:id="@+id/emp_biography"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:maxEms="10"
            android:maxLines="2"
            android:singleLine="true"
            android:text="@string/emp_biography"
            app:layout_constraintStart_toEndOf="@+id/emp_biography_str"
            app:layout_constraintTop_toBottomOf="@id/emp_email" />

        <TextView
            android:id="@+id/emp_team_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/emp_team"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/emp_full_name"
            app:layout_constraintTop_toBottomOf="@id/emp_biography" />

        <TextView
            android:id="@+id/emp_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/emp_team"
            app:layout_constraintStart_toEndOf="@+id/emp_team_str"
            app:layout_constraintTop_toBottomOf="@id/emp_biography" />

        <TextView
            android:id="@+id/emp_type_str"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/emp_type"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/emp_full_name"
            app:layout_constraintTop_toBottomOf="@id/emp_team" />

        <TextView
            android:id="@+id/emp_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/emp_type"
            app:layout_constraintStart_toEndOf="@+id/emp_type_str"
            app:layout_constraintTop_toBottomOf="@id/emp_team" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>